--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Me</h2>
-                <p>I am a junior backend engineer and a practitioner of Brazilian Jiu-Jitsu.s  </p>
-                <p>I completed The Iron Yard's Backend Engineering program, and now I create web apps, manage databases, <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
+                <p>I like a challenge, </p>
+                <p>I am a junior backend engineer and a practitioner of Brazilian Jiu-Jitsu.</p>
+                <p>I completed The Iron Yard's Backend Engineering program, and now I manage databases, create API enpoints, and create fully functioning web aps.</p>
                 <p>These are my tools:</p>
                 <ul class="list-unstyled">
                   <p>
@@ -115,7 +116,7 @@
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Here are some things I can do:</h2>
+                    <h2>Portfolio</h2>
                     <ul class="list-unstyled"><li>Python</li>
                         <li>Django</li>
                         <li>HTML</li>
@@ -125,6 +126,32 @@
                         <li>SQL</li>
                         <li>zhs/bash</li>
                      </ul>
+ <div class="row">
+   <div class="col-xs-6 col-md-3">
+     <a href="https://github.com/ConnorFieldUser/Hangman_repo" class="thumbnail">
+       <img src="img/hangman.png" alt="Hangman terminal game">
+       Hangman Terminal Game
+     </a>
+   </div>
+
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <img src="img/baseballAPI.png" alt="Baseball stats RESTful API">
+    </a>
+  </div>
+
+   <div class="col-xs-6 col-md-3">
+      <a href="#" class="thumbnail">
+        <img src="img/storetodoor.png" alt="...">
+      </a>
+    </div>
+    <div class="col-xs-6 col-md-3">
+      <a href="#" class="thumbnail">
+        <img src="img/storetodoor.png" alt="...">
+      </a>
+    </div>
+
+</div>
 
                     <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
                 </div>
