--- a/index.html
+++ b/index.html
@@ -117,15 +117,7 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Portfolio</h2>
-                    <ul class="list-unstyled"><li>Python</li>
-                        <li>Django</li>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>Django Rest Framework</li>
-                        <li>Git</li>
-                        <li>SQL</li>
-                        <li>zhs/bash</li>
-                     </ul>
+                    <br><hr>
  <div class="row">
    <div class="col-xs-6 col-md-3">
      <a href="https://github.com/ConnorFieldUser/Hangman_repo" class="thumbnail">
@@ -135,23 +127,27 @@
    </div>
 
   <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
+    <a href="https://github.com/ConnorFieldUser/Baseball-api" class="thumbnail">
       <img src="img/baseballAPI.png" alt="Baseball stats RESTful API">
+      Baseball RESTful API
     </a>
   </div>
 
    <div class="col-xs-6 col-md-3">
-      <a href="#" class="thumbnail">
-        <img src="img/storetodoor.png" alt="...">
+      <a href="https://store-to-door.herokuapp.com/carts/" class="thumbnail">
+        <img src="img/storetodoor.png" alt="Store To Door">
+          Store to Door (live example)
       </a>
     </div>
     <div class="col-xs-6 col-md-3">
-      <a href="#" class="thumbnail">
-        <img src="img/storetodoor.png" alt="...">
+      <a href="https://github.com/ConnorFieldUser/Final_Project" class="thumbnail">
+        <img src="img/storetodoordriverview.png" alt="Store to door repo">
+        Store to Door (repo)
       </a>
     </div>
 
 </div>
+<hr>
 
                     <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
                 </div>
@@ -175,6 +171,9 @@
                 <ul class="list-inline banner-social-buttons">
                     <li>
                         <a href="https://github.com/ConnorFieldUser" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/ConnorFieldUser" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkdin</span></a>
                     </li>
                 </ul>
             </div>
