got my bio hwo I like it

--- a/index.html
+++ b/index.html
@@ -91,21 +91,23 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Me</h2>
-                <p>I like a challenge, </p>
-                <p>I am a junior backend engineer and a practitioner of Brazilian Jiu-Jitsu.</p>
-                <p>I completed The Iron Yard's Backend Engineering program, and now I manage databases, create API enpoints, and create fully functioning web aps.</p>
+                <p>I like a challenge. And I don't quit.</p>
+                <p>I am a practitioner of Brazilian jiu-jitsu. My training has taught me to think quickly, analytically, and creatively. I've also learned to keep going no matter what.</p>
+                <p>Through hard work and perseverance, trial and error, guidance, and some cleverness, I was able to able to complete The Iron Yard 2016 Greenville Back End Engineering course.
+                   Now I'm a junior backend engineer. I structure and manage databases, create API endpoints, and design fully functioning web apps.</p>
                 <p>These are my tools:</p>
+
                 <ul class="list-unstyled">
-                  <p>
-                    <li>Python</li>
-                    <li>Django</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Django Rest Framework</li>
-                    <li>Git</li>
-                    <li>SQL</li>
-                    <li>zhs/bash</li>
-                  </p>
+                  <h4>
+                    <li style="text-decoration: underline;" >Python</li>
+                    <li style="text-decoration: underline;">Django</li>
+                    <li style="text-decoration: underline;">HTML</li>
+                    <li style="text-decoration: underline;">CSS</li>
+                    <li style="text-decoration: underline;">Django Rest Framework</li>
+                    <li style="text-decoration: underline;">Git</li>
+                    <li style="text-decoration: underline;">SQL</li>
+                    <li style="text-decoration: underline;">zhs/bash</li>
+                  </h4>
                  </ul>
             </div>
         </div>
