changes and resume

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
+              <hr>
                 <h2>About Me</h2>
                 <p>I like a challenge. And I don't quit.</p>
                 <p>I am a practitioner of Brazilian jiu-jitsu. My training has taught me to think quickly, analytically, and creatively. I've also learned to keep going no matter what.</p>
@@ -99,14 +100,15 @@
 
                 <ul class="list-unstyled">
                   <h4>
-                    <li style="text-decoration: underline;" >Python</li>
-                    <li style="text-decoration: underline;">Django</li>
-                    <li style="text-decoration: underline;">HTML</li>
-                    <li style="text-decoration: underline;">CSS</li>
-                    <li style="text-decoration: underline;">Django Rest Framework</li>
-                    <li style="text-decoration: underline;">Git</li>
-                    <li style="text-decoration: underline;">SQL</li>
-                    <li style="text-decoration: underline;">zhs/bash</li>
+                    <li style="text-decoration: ;" >Python</li>
+                    <li style="text-decoration: ;">Django</li>
+                    <li style="text-decoration: ;">HTML</li>
+                    <li style="text-decoration: ;">CSS</li>
+                    <li style="text-decoration ;">Django Rest Framework</li>
+                    <li style="text-decoration: ;">Git</li>
+                    <li style="text-decoration: ;">SQL</li>
+                    <li style="text-decoration: ;">zhs/bash</li>
+                    <hr>
                   </h4>
                  </ul>
             </div>
@@ -151,7 +153,7 @@
 </div>
 <hr>
 
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <a style="color:#2240A1 ;" href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
                 </div>
             </div>
         </div>
@@ -178,6 +180,13 @@
                         <a href="https://github.com/ConnorFieldUser" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkdin</span></a>
                     </li>
                 </ul>
+
+                <ul class="list-inline banner-social-buttons">
+                  <li>
+                    <a href="docs/resume.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o"></i> Resume<span class="network-name"></span></a>
+                  </li>
+                </ul>
+
             </div>
         </div>
     </section>
