changed resume link

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
                   <h4>
                     <li style="text-decoration: ;" >Python</li>
                     <li style="text-decoration: ;">Django</li>
+                    <li style="text-decoration  ;">RESTful APIs</li>
                     <li style="text-decoration: ;">HTML</li>
                     <li style="text-decoration: ;">CSS</li>
-                    <li style="text-decoration ;">Django Rest Framework</li>
                     <li style="text-decoration: ;">Git</li>
                     <li style="text-decoration: ;">SQL</li>
                     <li style="text-decoration: ;">zhs/bash</li>
@@ -183,7 +183,7 @@
 
                 <ul class="list-inline banner-social-buttons">
                   <li>
-                    <a href="docs/resume.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o"></i> Resume<span class="network-name"></span></a>
+                    <a href="docs/Resumelink.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o"></i> Resume<span class="network-name"></span></a>
                   </li>
                 </ul>
 
