--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Conquest</h1>
                         <p class="intro-text">Connor Field
-                            <br>Backend Engineer</p>
+                            <br>Back-End Engineer</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -94,8 +94,8 @@
                 <h2>About Me</h2>
                 <p>I like a challenge. And I don't quit.</p>
                 <p>I am a practitioner of Brazilian jiu-jitsu. My training has taught me to think quickly, analytically, and creatively. I've also learned to keep going no matter what.</p>
-                <p>Through hard work and perseverance, trial and error, guidance, and some cleverness, I was able to able to complete The Iron Yard 2016 Greenville Back End Engineering course.
-                   Now I'm a junior backend engineer. I structure and manage databases, create API endpoints, and design fully functioning web apps.</p>
+                <p>Through hard work and perseverance, trial and error, guidance, and some cleverness, I was able to able to complete The Iron Yard 2016 Greenville Back-End Engineering course.
+                   Now I'm a junior back-end engineer. I structure and manage databases, create API endpoints, and design fully functioning web apps.</p>
                 <p>These are my tools:</p>
 
                 <ul class="list-unstyled">
