typo and resume update

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <h2>About Me</h2>
                 <p>I like a challenge. And I don't quit.</p>
                 <p>I am a practitioner of Brazilian jiu-jitsu. My training has taught me to think quickly, analytically, and creatively. I've also learned to keep going no matter what.</p>
-                <p>Through hard work and perseverance, trial and error, guidance, and some cleverness, I was able to able to complete The Iron Yard 2016 Greenville Back-End Engineering course.
+                <p>Through hard work and perseverance, trial and error, guidance, and some cleverness, I was able to complete The Iron Yard 2016 Greenville Back-End Engineering course.
                    Now I'm a junior back-end engineer. I structure and manage databases, create API endpoints, and design fully functioning web apps.</p>
                 <p>These are my tools:</p>
 
@@ -183,7 +183,7 @@
 
                 <ul class="list-inline banner-social-buttons">
                   <li>
-                    <a href="docs/ResumeCCF.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o"></i> Resume<span class="network-name"></span></a>
+                    <a href="docs/MyresumeCCF.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o"></i> Resume<span class="network-name"></span></a>
                   </li>
                 </ul>
 
