--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                         <a href="https://github.com/ConnorFieldUser" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>
                     <li>
-                        <a href="https://github.com/ConnorFieldUser" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkdin</span></a>
+                        <a href="https://www.linkedin.com/in/connor-field-025962129?trk=hp-identity-name" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkdin</span></a>
                     </li>
                 </ul>
 
