fixed phone issue

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
               <p>
                 Phone: <br>
-              <a href="mailto:conquest.field@gmail.com">(864) 553-2202</a>
+              <a href="tel:+8645532202">(864) 553-2202</a>
                 </p>
                 <p>Email: <br>
               <a href="mailto:conquest.field@gmail.com">conquest.field@gmail.com</a>
