--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Connor Field 2016</p>
+            <p> &copy; Connor Field 2017</p>
         </div>
     </footer>
 
