--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
                 <ul class="list-inline banner-social-buttons">
                   <li>
-                    <a href="docs/MyresumeCCF.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o"></i> Resume<span class="network-name"></span></a>
+                    <a href="docs/latestresume.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o"></i> Resume<span class="network-name"></span></a>
                   </li>
                 </ul>
 
