--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <p>I like a challenge. And I don't quit.</p>
                 <p>I am a practitioner of Brazilian jiu-jitsu. My training has taught me to think quickly, analytically, and creatively. I've also learned to keep going no matter what.</p>
                 <p>Through hard work and perseverance, trial and error, guidance, and some cleverness, I was able to complete The Iron Yard 2016 Greenville Back-End Engineering course.
-                   Now I'm a junior back-end engineer. I structure and manage databases, create API endpoints, and design fully functioning web apps.</p>
+                   Now I'm a junior back-end engineer. I structure and manage databases, create API endpoints, and design fully-functioning web apps.</p>
                 <p>These are my tools:</p>
 
                 <ul class="list-unstyled">
