changed link to final project

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   </div>
 
    <div class="col-xs-6 col-md-3">
-      <a href="https://store-to-door.herokuapp.com/carts/" class="thumbnail">
+      <a href="https://store-to-door.herokuapp.com/" class="thumbnail">
         <img src="img/storetodoor.png" alt="Store To Door">
           Store to Door (live example)
       </a>
