links open in new tab

--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
+                    <li>
+                      <a class="page-scroll" href="#skills">Skills</a>
+                    </li>
+                    <li>
+                      <a  class="page-scroll" href="docs/latestresume.pdf" target="_blank">Resume</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -124,27 +130,27 @@
                     <br><hr>
  <div class="row">
    <div class="col-xs-6 col-md-3">
-     <a href="https://github.com/ConnorFieldUser/Hangman_repo" class="thumbnail">
+     <a href="https://github.com/ConnorFieldUser/Hangman_repo" class="thumbnail" target="_blank">
        <img src="img/hangman.png" alt="Hangman terminal game">
        Hangman Terminal Game
      </a>
    </div>
 
   <div class="col-xs-6 col-md-3">
-    <a href="https://github.com/ConnorFieldUser/Baseball-api" class="thumbnail">
+    <a href="https://github.com/ConnorFieldUser/Baseball-api" class="thumbnail" target="_blank">
       <img src="img/baseballAPI.png" alt="Baseball stats RESTful API">
       Baseball RESTful API
     </a>
   </div>
 
    <div class="col-xs-6 col-md-3">
-      <a href="https://store-to-door.herokuapp.com/" class="thumbnail">
+      <a href="https://store-to-door.herokuapp.com/" class="thumbnail" target="_blank">
         <img src="img/storetodoor.png" alt="Store To Door">
           Store to Door (live example)
       </a>
     </div>
     <div class="col-xs-6 col-md-3">
-      <a href="https://github.com/ConnorFieldUser/Final_Project" class="thumbnail">
+      <a href="https://github.com/ConnorFieldUser/Final_Project" class="thumbnail" target="_blank">
         <img src="img/storetodoordriverview.png" alt="Store to door repo">
         Store to Door (repo)
       </a>
@@ -172,16 +178,16 @@
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://github.com/ConnorFieldUser" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                        <a href="https://github.com/ConnorFieldUser" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/connor-field-025962129?trk=hp-identity-name" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkdin</span></a>
+                        <a href="https://www.linkedin.com/in/connor-field-025962129?trk=hp-identity-name" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkdin</span></a>
                     </li>
                 </ul>
 
                 <ul class="list-inline banner-social-buttons">
                   <li>
-                    <a href="docs/latestresume.pdf" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o"></i> Resume<span class="network-name"></span></a>
+                    <a href="docs/latestresume.pdf" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o"></i> Resume<span class="network-name"></span></a>
                   </li>
                 </ul>
 
