name now at the top of the page

--- a/index.html
+++ b/index.html
@@ -80,9 +80,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Conquest</h1>
-                        <p class="intro-text">Connor Field
-                            <br>Back-End Engineer</p>
+                        <h1 class="brand-heading">Connor Field</h1>
+                        <p class="intro-text">Back-End Engineer</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
