--- a/index.html
+++ b/index.html
@@ -101,26 +101,12 @@
                 <p>I am a practitioner of Brazilian jiu-jitsu. My training has taught me to think quickly, analytically, and creatively. I've also learned to keep going no matter what.</p>
                 <p>Through hard work and perseverance, trial and error, guidance, and some cleverness, I was able to complete The Iron Yard 2016 Greenville Back-End Engineering course.
                    Now I'm a junior back-end engineer. I structure and manage databases, create API endpoints, and design fully-functioning web apps.</p>
-                <p>These are my tools:</p>
-
-                <ul class="list-unstyled">
-                  <h4>
-                    <li style="text-decoration: ;" >Python</li>
-                    <li style="text-decoration: ;">Django</li>
-                    <li style="text-decoration  ;">RESTful APIs</li>
-                    <li style="text-decoration: ;">HTML</li>
-                    <li style="text-decoration: ;">CSS</li>
-                    <li style="text-decoration: ;">Git</li>
-                    <li style="text-decoration: ;">SQL</li>
-                    <li style="text-decoration: ;">zhs/bash</li>
-                    <hr>
-                  </h4>
-                 </ul>
+                <hr>
             </div>
         </div>
     </section>
 
-    <!-- Skills Section -->
+    <!-- Portfolio Section -->
     <section id="download" class="content-section text-center">
         <div class="download-section">
             <div class="container">
@@ -161,6 +147,35 @@
             </div>
         </div>
     </section>
+
+
+<!-- Skills Section -->
+
+<section id="skills" class="content-section text-center">
+    <div class="row">
+        <div class="container">
+            <div class="col-lg-8 col-lg-offset-2">
+              <hr>
+                <h2>Skills</h2>
+                <ul class="list-unstyled">
+                  <h4>
+                    <li style="text-decoration: ;" >Python</li>
+                    <li style="text-decoration: ;">Django</li>
+                    <li style="text-decoration  ;">Django REST Framework</li>
+                    <li style="text-decoration: ;">HTML</li>
+                    <li style="text-decoration: ;">CSS</li>
+                    <li style="text-decoration: ;">Git</li>
+                    <li style="text-decoration: ;">SQL</li>
+                    <li style="text-decoration: ;">zhs/bash</li>
+                    <hr>
+                  </h4>
+                 </ul>
+                <br><br>
+
+              </div>
+          </div>
+      </div>
+  </section>
 
     <!-- Contact Section -->
     <section id="contact" class="container content-section text-center">
