--- a/index.html
+++ b/index.html
@@ -136,50 +136,50 @@
         <a style="background-color:#366CAB; border-color:#366CAB" href="https://github.com/ConnorFieldUser/Final_Project" class="btn btn-info" role="button" target="_blank">Code</a>
 
 
-<p>Store to Door is an example of an ordering and delivery platform and was my final project at The Iron Yard.</p>
+        <p>Store to Door is an example of an ordering and delivery platform and was my final project at The Iron Yard.</p>
 
-<p>Customer users can add contact information, browse grocery items, look for nearby stores, add items to a cart, send the list up to the driver users. Search items are pulled through the Supermarket API. Driver users can mark lists as complete or in progress. The original concept was to assist the elderly, so we took care to make it clear and simple to use.</p>
+        <p>Customer users can add contact information, browse grocery items, look for nearby stores, add items to a cart, send the list up to the driver users. Search items are pulled through the Supermarket API. Driver users can mark lists as complete or in progress. The original concept was to assist the elderly, so we took care to make it clear and simple to use.</p>
 
-<p>I was the backend engineer, and I was in charge of database management, API endpoints, driver side auth through django, email config, DRF token auth, and Heroku deployment.</p>
+        <p>I was the backend engineer, and I was in charge of database management, API endpoints, driver side auth through django, email config, DRF token auth, and Heroku deployment.</p>
 
-<p>To get the app running locally, install the requirements.txt file, set up a Python 3 virtual enviroment, set a Django secret key in settings, and get an API key for the Supermarket API.</p>
+        <p>To get the app running locally, install the requirements.txt file, set up a Python 3 virtual enviroment, set a Django secret key in settings, and get an API key for the Supermarket API.</p>
 
-<ul>
-<p>
-Uses:</p>
-<h3>
-<li>Python</li>
+        <ul>
+        <p>
+        Uses:</p>
+        <h3>
+        <ul>
+        <li>Python</li>
 
-<li>Bootstrap</li>
+        <li>Bootstrap</li>
 
-<li>Django</li>
+        <li>Django</li>
 
-<li>Django REST Framework</li>
+        <li>Django REST Framework</li>
 
-<li>Gunicorn wsgi server</li>
+        <li>Gunicorn WSGI</li>
 
-<li>Psycopg2</li>
+        <li>Psycopg2</li>
 
-<li>dj-database-url</li>
+        <li>dj-database-url</li>
 
-<li>WhiteNoise</li>
+        <li>WhiteNoise</li>
 
-<li>Python requests library</li>
+        <li>Python requests library</li>
 
-<li>XMLJSON library</li>
+        <li>XMLJSON library</li>
 
-<li>JavaScript</li>
+        <li>JavaScript</li>
 
-<li>HTML/CSS/SCSS</li>
+        <li>HTML/CSS/SCSS</li>
 
-<li>jQuery</li>
+        <li>jQuery</li>
 
-<li>Backbone</li>
+        <li>Backbone</li>
 
-<li>React</li>
-</ul>
-</h3>
-        </p>
+        <li>React</li>
+        </ul>
+        </h3>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -198,10 +198,37 @@ Uses:</p>
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Images Header</h4>
+        <h4 class="modal-title">Money Stash</h4>
       </div>
       <div class="modal-body">
-        <p>Some images in the modal.</p>
+        <a href="https://money-stash.herokuapp.com/" class="thumbnail" target="_blank">
+          <img src="img/DRF_Bank.png" alt="Store To Door">
+        </a>
+        <p>Money Stash is a simulated banking app where you can create an account and deposit or withdraw.</p>
+        <p>Integrated with Django REST Framework to provide JSON data to users.</p>
+        <p>To get the app running locally, install the requirements.txt file and set up a Python 3 virtual enviroment</p>
+        <p>Uses:</p>
+        <ul>
+          <h3>
+          <li>Python</li>
+
+          <li>Bootstrap</li>
+
+          <li>Django</li>
+
+          <li>Django REST Framework</li>
+
+          <li>Gunicorn WSGI </li>
+
+          <li>Psycopg2</li>
+
+          <li>dj-database-url</li>
+
+          <li>WhiteNoise</li>
+
+          <li>HTML/CSS/SCSS</li>
+          </ul>
+          </h3>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -222,7 +249,7 @@ Uses:</p>
         <h4 class="modal-title">REST API</h4>
       </div>
       <div class="modal-body">
-        <p>REST API uses Django REST Framework to provede JSON data to users.</p>
+        <p>Moneyses Django REST Framework to provede JSON data to users.</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -241,7 +268,7 @@ Uses:</p>
    </li>
    </div>
    <div class="col-xs-6 col-md-3">
-       <button style="background-color:#366CAB; border-color:#366CAB" type="button" class="btn btn-info" data-toggle="modal" data-target="#imagesModal">Image Gathering Site</button>
+       <button style="background-color:#366CAB; border-color:#366CAB" type="button" class="btn btn-info" data-toggle="modal" data-target="#imagesModal">REST Framework Bank</button>
    </div>
    <div class="col-xs-6 col-md-3">
        <button style="background-color:#366CAB; border-color:#366CAB" type="button" class="btn btn-info" data-toggle="modal" data-target="#restModal">REST API</button>
@@ -326,7 +353,7 @@ Uses:</p>
 
                 <ul class="list-inline banner-social-buttons">
                   <li>
-                    <a href="docs/latestresume.pdf" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o"></i> Resume<span class="network-name"></span></a>
+                    <a href="docs/CCFResume.pdf" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-file-pdf-o"></i> Resume<span class="network-name"></span></a>
                   </li>
                 </ul>
 
