--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 style="color: #366CAB"class="modal-title">Store to Door</h4>
+        <h4 class="modal-title">Store to Door</h4>
       </div>
       <div class="modal-body">
         <!-- <p>Some store in the modal.</p> -->
@@ -204,6 +204,10 @@
         <a href="https://money-stash.herokuapp.com/" class="thumbnail" target="_blank">
           <img src="img/DRF_Bank.png" alt="Store To Door">
         </a>
+        <a style="background-color:#366CAB; border-color:#366CAB" href="https://money-stash.herokuapp.com/" class="btn btn-info" role="button" target="_blank">Live Example</a>
+        <a style="background-color:#366CAB; border-color:#366CAB" href="https://github.com/ConnorFieldUser/The_Iron_Bank" class="btn btn-info" role="button" target="_blank">Code</a>
+
+
         <p>Money Stash is a simulated banking app where you can create an account and deposit or withdraw.</p>
         <p>Integrated with Django REST Framework to provide JSON data to users.</p>
         <p>To get the app running locally, install the requirements.txt file and set up a Python 3 virtual enviroment</p>
@@ -270,28 +274,13 @@
    <div class="col-xs-6 col-md-3">
        <button style="background-color:#366CAB; border-color:#366CAB" type="button" class="btn btn-info" data-toggle="modal" data-target="#imagesModal">REST Framework Bank</button>
    </div>
-   <div class="col-xs-6 col-md-3">
-       <button style="background-color:#366CAB; border-color:#366CAB" type="button" class="btn btn-info" data-toggle="modal" data-target="#restModal">REST API</button>
-   </div>
-  <div class="col-xs-6 col-md-3">
-    <a href="https://github.com/ConnorFieldUser/Baseball-api" class="thumbnail" target="_blank">
-      <img src="img/baseballAPI.png" alt="Baseball stats RESTful API">
-      <button style="background-color:#366CAB; border-color:#366CAB" type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">Hangman Terminal Game</button>
-    </a>
-  </div>
-
-   <div class="col-xs-6 col-md-3">
-      <a href="https://store-to-door.herokuapp.com/" class="thumbnail" target="_blank">
-        <img src="img/storetodoor.png" alt="Store To Door">
-          Store to Door (live example)
-      </a>
-    </div>
-    <div class="col-xs-6 col-md-3">
-      <a href="https://github.com/ConnorFieldUser/Final_Project" class="thumbnail" target="_blank">
-        <img src="img/storetodoordriverview.png" alt="Store to door repo">
-        Store to Door (repo)
-      </a>
-    </div>
+   <br><br><br><br>
+   <!-- <div class="col-xs-6 col-md-3">
+       <button style="background-color:#366CAB; border-color:#366CAB" type="button" class="btn btn-info" data-toggle="modal" data-target="#restModal">Random Character Selector</button>
+   </div> -->
+   <!-- <div class="col-xs-6 col-md-3">
+       <button style="background-color:#366CAB; border-color:#366CAB" type="button" class="btn btn-info" data-toggle="modal" data-target="#restModal">Ruby app</button>
+   </div> -->
 
 </div>
 <hr>
