--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </li>
 
                     <li>
-                      <a  class="page-scroll" href="docs/latestresume.pdf" target="_blank">Resume</a>
+                      <a  class="page-scroll" href="docs/CCFResume" target="_blank">Resume</a>
                     </li>
                 </ul>
             </div>
