--- a/index.html
+++ b/index.html
@@ -267,13 +267,12 @@
                     <br><hr>
 
  <div class="row">
-   <div class="col-xs-6 col-md-3">
+   <!-- <div class="col-xs-6 col-md-3"> -->
        <button style="background-color:#366CAB; border-color:#366CAB" type="button" class="btn btn-info" data-toggle="modal" data-target="#storeModal">Store to Door</button>
-   </li>
-   </div>
-   <div class="col-xs-6 col-md-3">
+   <!-- </div> -->
+   <!-- <div class="col-xs-6 col-md-2"> -->
        <button style="background-color:#366CAB; border-color:#366CAB" type="button" class="btn btn-info" data-toggle="modal" data-target="#imagesModal">REST Framework Bank</button>
-   </div>
+   <!-- </div> -->
    <br><br><br><br>
    <!-- <div class="col-xs-6 col-md-3">
        <button style="background-color:#366CAB; border-color:#366CAB" type="button" class="btn btn-info" data-toggle="modal" data-target="#restModal">Random Character Selector</button>
