.pdf, fixed the resume on navbar

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </li>
 
                     <li>
-                      <a  class="page-scroll" href="docs/CCFResume" target="_blank">Resume</a>
+                      <a  class="page-scroll" href="docs/CCFResume.pdf" target="_blank">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -268,10 +268,16 @@
 
  <div class="row">
    <!-- <div class="col-xs-6 col-md-3"> -->
-       <button style="background-color:#366CAB; border-color:#366CAB" type="button" class="btn btn-info" data-toggle="modal" data-target="#storeModal">Store to Door</button>
+   <p>
+            <button style="background-color:#366CAB; border-color:#366CAB" type="button" class="btn btn-info" data-toggle="modal" data-target="#storeModal">Store to Door</button>
+  </p>
+
    <!-- </div> -->
    <!-- <div class="col-xs-6 col-md-2"> -->
-       <button style="background-color:#366CAB; border-color:#366CAB" type="button" class="btn btn-info" data-toggle="modal" data-target="#imagesModal">REST Framework Bank</button>
+   <p>
+        <button style="background-color:#366CAB; border-color:#366CAB" type="button" class="btn btn-info" data-toggle="modal" data-target="#imagesModal">REST Framework Bank</button>
+
+  </p>
    <!-- </div> -->
    <br><br><br><br>
    <!-- <div class="col-xs-6 col-md-3">
